--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -119,19 +119,7 @@
             </q-tr>
             <q-tr v-show="props.expand" :props="props">
               <q-td colspan="100%">
-                <div class="row items-center q-mb-lg">
-                  <div class="col-12">
-                    <q-tabs
-                      v-model="tab"
-                      no-caps
-                      class="bg-dark text-white shadow-2"
-                    >
-                      <q-tab name="items" label="Items"></q-tab>
-                    </q-tabs>
-                    <q-tab-panels v-model="tab">
-                      <q-tab-panel name="items">
-                        <div>
-                          <div class="row items-center q-mb-md">
+                          <div class="row items-center q-mb-lg q-mt-lg">
                             <div class="col-12 col-md-6">
                               <q-option-group
                                 inline
@@ -169,6 +157,20 @@
                               ></q-select>
                             </div>
                           </div>
+                <div v-if="!props.row.use_inventory" class="row items-center q-mb-lg">
+                  <div class="col-12">
+
+                    <q-tabs
+                      v-model="tab"
+                      no-caps
+                      class="bg-dark text-white shadow-2"
+                    >
+                      <q-tab name="items" label="Items"></q-tab>
+                    </q-tabs>
+                    <q-tab-panels v-model="tab">
+                      <q-tab-panel name="items">
+                        <div>
+
                           <div class="row items-center no-wrap q-mb-md">
                             <div class="col-12 q-pr-lg">
                               <q-btn
