--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -119,47 +119,49 @@
             </q-tr>
             <q-tr v-show="props.expand" :props="props">
               <q-td colspan="100%">
-                          <div class="row items-center q-mb-lg q-mt-lg">
-                            <div class="col-12 col-md-6">
-                              <q-option-group
-                                inline
-                                dense
-                                :model-value="props.row.use_inventory"
-                                :options="inventoryModeOptions"
-                                @update:model-value="onInventoryModeChange(props.row, $event)"
-                              >
-                                <q-tooltip
-                                  v-if="!inventoryStatus.enabled"
-                                  class="q-pa-sm"
-                                >
-                                  inventory extension must be enabled.
-                                </q-tooltip>
-                              </q-option-group>
-                            </div>
-                            <div
-                              class="col-12 col-md-6"
-                              v-if="props.row.use_inventory"
-                            >
-                              <q-select
-                                filled
-                                dense
-                                multiple
-                                emit-value
-                                map-options
-                                use-input
-                                use-chips
-                                hide-dropdown-icon
-                                v-model="props.row.inventory_tags"
-                                :options="inventoryTagOptions"
-                                label="Inventory tags"
-                                :disable="!inventoryStatus.enabled"
-                                @update:model-value="onInventoryTagsChange(props.row, $event)"
-                              ></q-select>
-                            </div>
-                          </div>
-                <div v-if="!props.row.use_inventory" class="row items-center q-mb-lg">
+                <div class="row items-center q-mb-lg q-mt-lg">
+                  <div class="col-12 col-md-6">
+                    <q-option-group
+                      inline
+                      dense
+                      :model-value="props.row.use_inventory"
+                      :options="inventoryModeOptions"
+                      @update:model-value="onInventoryModeChange(props.row, $event)"
+                    >
+                      <q-tooltip
+                        v-if="!inventoryStatus.enabled"
+                        class="q-pa-sm"
+                      >
+                        inventory extension must be enabled.
+                      </q-tooltip>
+                    </q-option-group>
+                  </div>
+                  <div class="col-12 col-md-6" v-if="props.row.use_inventory">
+                    <q-select
+                      filled
+                      dense
+                      multiple
+                      emit-value
+                      map-options
+                      use-input
+                      use-chips
+                      hide-dropdown-icon
+                      v-model="props.row.inventory_tags"
+                      :options="inventoryTagOptions"
+                      label="Inventory tags"
+                      :disable="!inventoryStatus.enabled"
+                      @update:model-value="onInventoryTagsChange(props.row, $event)"
+                    ></q-select>
+                  </div>
+                </div>
+                <div v-if="props.row.use_inventory" class="q-mb-md">
+                  <q-banner dense rounded class="bg-grey-2 text-dark">
+                    Using items from the Inventory extension. Tags control which
+                    products appear in PoS.
+                  </q-banner>
+                </div>
+                <div v-else class="row items-center q-mb-lg">
                   <div class="col-12">
-
                     <q-tabs
                       v-model="tab"
                       no-caps
@@ -170,7 +172,6 @@
                     <q-tab-panels v-model="tab">
                       <q-tab-panel name="items">
                         <div>
-
                           <div class="row items-center no-wrap q-mb-md">
                             <div class="col-12 q-pr-lg">
                               <q-btn
@@ -233,12 +234,7 @@
                               </q-btn-dropdown>
                             </div>
                           </div>
-                          <div v-if="props.row.use_inventory" class="q-mb-md">
-                            <q-banner dense rounded class="bg-grey-2 text-dark">
-                              Using items from the Inventory extension. Tags
-                              control which products appear in PoS.
-                            </q-banner>
-                          </div>
+
                           <div class="row items-center no-wrap q-mb-md">
                             <div class="col-12">
                               <q-table
