--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -120,7 +120,7 @@
             <q-tr v-show="props.expand" :props="props">
               <q-td colspan="100%">
                 <div class="row items-center q-mb-lg q-mt-lg">
-                  <div class="col-12 col-md-6">
+                  <div class="col-12 col-md-4">
                     <q-option-group
                       inline
                       dense
@@ -136,7 +136,7 @@
                       </q-tooltip>
                     </q-option-group>
                   </div>
-                  <div class="col-12 col-md-6" v-if="props.row.use_inventory">
+                  <div class="col-12 col-md-4" v-if="props.row.use_inventory">
                     <q-select
                       filled
                       dense
@@ -149,8 +149,28 @@
                       v-model="props.row.inventory_tags"
                       :options="inventoryTagOptions"
                       label="Inventory tags"
+                      hint="Frontend tags"
                       :disable="!inventoryStatus.enabled"
                       @update:model-value="onInventoryTagsChange(props.row, $event)"
+                    ></q-select>
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <q-select
+                      filled
+                      dense
+                      multiple
+                      emit-value
+                      map-options
+                      use-input
+                      use-chips
+                      hide-dropdown-icon
+                      v-model="props.row.inventory_omit_tags"
+                      :options="inventoryOmitTagOptions"
+                      label="Omit tags"
+                      hint="Exclude products carrying these tags"
+                      class="q-ml-md"
+                      :disable="!inventoryStatus.enabled"
+                      @update:model-value="onInventoryOmitTagsChange(props.row, $event)"
                     ></q-select>
                   </div>
                 </div>
