--- a/templates/tpos/_cart.html
+++ b/templates/tpos/_cart.html
@@ -66,7 +66,11 @@
               </td>
               <td>
                 <div class="text-center">
-                  <span v-text="item.formattedPrice"></span>
+                  <span
+                    class="cursor-pointer text-secondary"
+                    @click="promptItemPrice(item)"
+                    v-text="item.formattedPrice"
+                  ></span>
                 </div>
               </td>
               <td>
