--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -193,6 +193,14 @@
     .receipt p {
       margin: 0 !important;
     }
+    .receipt .q-table__middle {
+      overflow: visible !important;
+    }
+    .receipt .q-table td,
+    .receipt .q-table th {
+      white-space: normal !important;
+      word-break: break-word;
+    }
   }
 </style>
 {% endblock %} {% block scripts %}
