Its sooo annoying not being able to click away from the dialog

--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -326,7 +326,7 @@
     </q-card>
   </q-dialog>
 
-  <q-dialog v-model="currency_choice" persistent>
+  <q-dialog v-model="currency_choice">
     <q-card class="q-pa-md">
       <div class="text-h6 q-mb-md">Payment Method</div>
       <div class="column q-gutter-y-sm">
