--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -54,6 +54,34 @@
     </q-card>
   </q-dialog>
 
+  <q-dialog v-model="printDialog.show" @hide="closePrintDialog">
+    <q-card class="q-pa-lg q-pt-xl lnbits__dialog-card">
+      <q-card-section class="row items-center q-pb-none">
+        <div class="text-h6">Print Receipt</div>
+        <q-space />
+        <q-btn icon="close" flat round dense v-close-popup />
+      </q-card-section>
+      <q-card-actions align="right">
+        <q-btn
+          round
+          icon="receipt_long"
+          color="secondary"
+          @click.stop="printOrderReceipt(printDialog.paymentHash)"
+        >
+          <q-tooltip>Print order receipt</q-tooltip>
+        </q-btn>
+        <q-btn
+          round
+          icon="print"
+          color="primary"
+          @click.stop="printReceipt(printDialog.paymentHash)"
+        >
+          <q-tooltip>Print receipt</q-tooltip>
+        </q-btn>
+      </q-card-actions>
+    </q-card>
+  </q-dialog>
+
   <q-dialog v-model="tipDialog.show" position="top">
     <q-card class="q-pa-lg q-pt-xl lnbits__dialog-card">
       <div class="text-center q-mb-xl">
