--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -562,7 +562,7 @@
             dense
             v-model.number="formDialog.data.withdraw_limit"
             type="number"
-            label="Max amount to be sold daily ({{g.settings.denomination}}) *"
+            :label="`Max amount to be sold daily (${g.settings.denomination}) *`"
           ></q-input>
 
           <div class="row">
@@ -573,7 +573,7 @@
                 v-model.number="formDialog.data.withdraw_between"
                 type="number"
                 min="0"
-                label="Time between withdraws ({{g.settings.denomination}})"
+                :label="`Time between withdraws (${g.settings.denomination})`"
               ></q-input>
             </div>
             <div class="col-4">
